@@ -1,3 +1,5 @@
+include $(top_srcdir)/aminclude.am
+
 SUBDIRS = libLanlGeoMag 
 EXTRA_DIST = Examples Doc ViewDriftShell
 
