@@ -7,7 +7,7 @@ use POSIX;
 {
 
     #$LGM_EOP_DATA_DIR          = "/usr/local/share/LanlGeoMag/EopData";
-    #$LGM_EOP_DATA_DIR          = "/tmp/lgm/share/LanlGeoMag/EopData";
+    #$LGM_EOP_DATA_DIR          = "/tmp/lgmn/share/LanlGeoMag/EopData";
     $LGM_EOP_DATA_DIR          = "@datadir@";
     $LgmEopDatFile             = "$LGM_EOP_DATA_DIR/LgmEop.dat";
     $LgmLeapSecondDatesDatFile = "$LGM_EOP_DATA_DIR/Lgm_LeapSecondDates.dat";
